--- a/ui-ngx/package.json
+++ b/ui-ngx/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --open",
+    "start": "ng serve --proxy-config proxy.conf.json --poll=2000 --host 0.0.0.0 --open",
     "build": "ng build",
     "build:prod": "ng build --prod --vendor-chunk",
     "test": "ng test",
